--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.5
 Django==3.0.4
 django-debug-toolbar==2.2
-django-dotenv==1.4.2
+psycopg2-binary==2.8.4
+python-dotenv==0.12.0
 pytz==2019.3
 sqlparse==0.3.1
