--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.2.5
 Django==3.0.4
 django-debug-toolbar==2.2
+django-extensions==2.2.8
 psycopg2-binary==2.8.4
 python-dotenv==0.12.0
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.1
